--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
     "expo": "~36.0.0",
+    "expo-image-picker": "^8.0.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-image-picker": "^2.3.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
