--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
+    "buffer": "^5.5.0",
     "expo": "~36.0.0",
     "expo-image-picker": "^8.0.2",
     "react": "~16.9.0",
@@ -22,6 +23,8 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swipeout": "^2.3.6",
+    "react-native-uuid": "^1.4.9",
     "react-native-web": "~0.11.7",
     "yarn": "^1.22.4"
   },
