--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-uuid": "^1.4.9",
     "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
