--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-native-uuid": "^1.4.9",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
+    "realm": "^5.0.3",
     "redux": "^4.0.5",
-    "yarn": "^1.22.4"
+    "yarn": "^1.22.4",
+    "expo-sqlite": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
